@@ -2,13 +2,13 @@
 
 # File    : makeglossaries
 # Author  : Nicola Talbot
-# Version : 4.41
+# Version : 4.44
 # Description: simple Perl script that calls makeindex or xindy.
 # Intended for use with "glossaries.sty" (saves having to remember
 # all the various switches)
 
 # This file is distributed as part of the glossaries LaTeX package.
-# Copyright 2007 Nicola L.C. Talbot
+# Copyright 2019 Nicola L.C. Talbot
 # This work may be distributed and/or modified under the
 # conditions of the LaTeX Project Public License, either version 1.3
 # of this license or any later version.
@@ -31,9 +31,11 @@
 # glossaries-babel.sty, glossaries-polyglossia.sty, glossaries.perl.
 # Also makeglossaries and makeglossaries-lite.lua.
 
-my $version="4.41 (2018-07-23)";
+my $version="4.44 (2019-12-06)";
 
 # History:
+# v4.43:
+#   * No change.
 # v4.41:
 #   * No change.
 # v4.40:
