@@ -1,6 +1,6 @@
-.\" Automatically generated by Pandoc 2.7.3
+.\" Automatically generated by Pandoc 2.8.1
 .\"
-.TH "CTWILL" "1" "March 10, 2019" "Web2c @VERSION@" "General Commands Manual"
+.TH "CTWILL" "1" "December 7, 2019" "Web2c @VERSION@" "General Commands Manual"
 .hy
 .SH NAME
 .PP
@@ -238,7 +238,7 @@ Levy and Knuth.
 .PD 0
 .P
 .PD
-As of 2019, \f[B]ctwill\f[R] and its utilities \f[B]ctwill-refsort\f[R] and
-\f[B]ctwill-twinx\f[R] have been fully integrated with the extended CWEBbin
-system that serves as the basis for CWEB in TeX\ Live; see the project
+\f[B]ctwill\f[R] and its utilities \f[B]ctwill-refsort\f[R] and \f[B]ctwill-twinx\f[R]
+have been fully integrated with the CWEBbin extension that serves as the
+basis for CWEB in TeX\ Live; see the project
 page (https://github.com/ascherer/cwebbin).
