@@ -1,6 +1,6 @@
-.\" Automatically generated by Pandoc 2.7.3
+.\" Automatically generated by Pandoc 2.8.1
 .\"
-.TH "CWEB" "1" "June 20, 2019" "Web2c @VERSION@" "General Commands Manual"
+.TH "CWEB" "1" "December 7, 2019" "Web2c @VERSION@" "General Commands Manual"
 .hy
 .SH NAME
 .PP
@@ -164,7 +164,5 @@ Many other helpers are acknowledged in the CWEB manual.
 .PD 0
 .P
 .PD
-As of 2019, the CWEB system in TeX\ Live is based on the CWEBbin
-extension that collects ideas and improvements from numerous
-contributors; see the project
+CWEB in TeX\ Live is based on the CWEBbin extension; see the project
 page (https://github.com/ascherer/cwebbin).
